data/derived/comb/progs/unify/prog4264.ml.out
Characters 87-91:
  | Sine  expr -> sin(pi*.(eval expr x y))
                                ^^^^
Error: This expression has type expr but an expression was expected of type
         expr * ('a -> 'b -> 'c) * ('a -> 'b -> 'c)
